packages/docs/i18n/ko/docusaurus-plugin-content-docs/version-4.8.1/api/Renderer.mdx
---
custom_edit_url: null
---

```ts
class Renderer
```
[Panel](Panel)과 그 엘리먼트들을 관리하는 컴포넌트

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#panels">panels</a><br/><a href="#rendering">rendering</a><br/><a href="#panelCount">panelCount</a><br/><a href="#strategy">strategy</a><br/><a href="#align">align</a></div><div className="col col--6"><a href="#render">render</a><br/><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#getPanel">getPanel</a><br/><a href="#updatePanelSize">updatePanelSize</a><br/><a href="#batchInsert">batchInsert</a><br/><a href="#batchInsertDefer">batchInsertDefer</a><br/><a href="#batchRemove">batchRemove</a><br/><a href="#batchRemoveDefer">batchRemoveDefer</a><br/><a href="#updateAfterPanelChange">updateAfterPanelChange</a><br/><a href="#checkPanelContentsReady">checkPanelContentsReady</a></div></div>
</div>

## Constructor
```ts
new Renderer(options, options.align, options.strategy)
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|||옵션 오브젝트|
|options.align|Constants.ALIGN \| string \| number|✔️|"center"|전체 패널에 적용될 [align](Flicking#align) 값|
|options.strategy|object|✔️||RenderingStrategy의 인스턴스(내부 모듈)|

## Properties

### panels {#panels}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

전체 패널들의 배열

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### rendering {#rendering}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 렌더링이 시작되어 끝나기 전까지의 상태인지의 여부

**Type**: boolean

<div className="notification is-warning my-2">⚠️ This member is for <strong>internal</strong> use only.</div>

### panelCount {#panelCount}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

전체 패널의 개수

**Type**: number

### strategy {#strategy}

<div className="bulma-tags">

</div>

<div className="notification is-warning my-2">⚠️ This member is for <strong>internal</strong> use only.</div>

### align {#align}

<div className="bulma-tags">

</div>

[Panel](Panel)에 공통적으로 적용할 [align](Panel#align) 값

**Type**: Constants.ALIGN \| string \| number

## Methods

### render {#render}

<div className="bulma-tags">

</div>

패널 엘리먼트들을 카메라 엘리먼트 내부에 렌더링합니다

**Returns**: this

### init {#init}

<div className="bulma-tags">

</div>

Renderer를 초기화합니다

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|||Flicking의 인스턴스|

### destroy {#destroy}

<div className="bulma-tags">

</div>

Renderer를 초기 상태로 되돌립니다

**Returns**: void

### getPanel {#getPanel}

<div className="bulma-tags">

</div>

주어진 인덱스에 해당하는 [Panel](Panel)을 반환합니다. 주어진 인덱스에 해당하는 패널이 존재하지 않을 경우 `null`을 반환합니다.

**Returns**: [Panel](Panel) \| null
- 주어진 인덱스에 해당하는 패널

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number||||

**See**:
- [Panel](Panel)

### updatePanelSize {#updatePanelSize}

<div className="bulma-tags">

</div>

모든 패널의 크기를 업데이트합니다

**Returns**: this

### batchInsert {#batchInsert}

<div className="bulma-tags">

</div>

주어진 인덱스에 새로운 패널들을 추가합니다
해당 인덱스보다 같거나 큰 인덱스를 가진 기존 패널들은 추가한 패널의 개수만큼 인덱스가 증가합니다.

**Returns**: Array&lt;[Panel](Panel)&gt;
- 추가된 패널들의 배열

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|items|Array&lt;object&gt;|||추가할 아이템들의 배열|
|items.index|number|✔️||새로 패널들을 추가할 인덱스|
|items.elements|Array&lt;any&gt;|✔️||엘리먼트의 배열 혹은 프레임워크에서 엘리먼트를 포함한 컴포넌트들의 배열|
|items.hasDOMInElements|boolean|✔️||내부에 실제 DOM 엘리먼트들을 포함하고 있는지 여부. true로 설정할 경우, 렌더러는 해당 엘리먼트들을 카메라 엘리먼트 내부에 추가합니다|

### batchInsertDefer {#batchInsertDefer}

<div className="bulma-tags">

</div>

Defers update
camera position & others will be updated after calling updateAfterPanelChange

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|...items|Array&lt;{index: number, elements: any[], hasDOMInElements: boolean}&gt;||||

<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### batchRemove {#batchRemove}

<div className="bulma-tags">

</div>

주어진 인덱스의 패널을 제거합니다
해당 인덱스보다 큰 인덱스를 가진 기존 패널들은 제거한 패널의 개수만큼 인덱스가 감소합니다

**Returns**: [Panel](Panel)[]
- 제거된 패널들의 배열

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|items|Array&lt;object&gt;|||제거할 아이템들의 배열|
|items.index|number|✔️||제거할 패널의 인덱스|
|items.deleteCount|number|✔️|1|`index` 이후로 제거할 패널의 개수|
|items.hasDOMInElements|boolean|✔️|1|내부에 실제 DOM 엘리먼트들을 포함하고 있는지 여부. true로 설정할 경우, 렌더러는 해당 엘리먼트들을 카메라 엘리먼트 내부에서 제거합니다|

### batchRemoveDefer {#batchRemoveDefer}

<div className="bulma-tags">

</div>

Defers update
camera position & others will be updated after calling updateAfterPanelChange

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|...items|Array&lt;{index: number, deleteCount: number, hasDOMInElements: boolean}&gt;||||

<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### updateAfterPanelChange {#updateAfterPanelChange}

<div className="bulma-tags">

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|panelsAdded|[Panel](Panel)[]||||
|panelsRemoved|[Panel](Panel)[]||||

<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

### checkPanelContentsReady {#checkPanelContentsReady}

<div className="bulma-tags">

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|checkingPanels|[Panel](Panel)[]||||

<div className="notification is-warning my-2">⚠️ This function is for <strong>internal</strong> use only.</div>

